[package]
name = "gownobot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
tokio = { version = "1.37.0", features = ["full"] }
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
lazy_static = "1.4.0"
dotenvy = "0.15.7"
